--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 <body>
     <div id="grid-container">
         <header class="header">
-            <div class="header-logo"></div>
+            <div class="transformacion-logo">
+                <div class="header-logo"></div>
+            </div>
         </header>
 
-        <nav class="header-menu">
+        <nav class="header-menu animate__animated animate__bounce">
             <ul>
                 <li><a href="index.html"><p>Home</p></a></li>
                 <li><p>Facial</p>
